--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ include(CheckCXXCompilerFlag)
 include(CheckCXXSourceRuns)
 include(CheckIncludeFiles)
 
+if(CMAKE_SIZEOF_VOID_P MATCHES 8)
+    set(PLATFORM 64)
+else()
+    set(PLATFORM 32)
+endif()
+
 if(MSVC)
   if(${MSVC_VERSION} LESS 1900)
     message(FATAL_ERROR "You are using an unsupported version of Visual Studio "
@@ -21,9 +27,22 @@ if(MSVC)
 
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
 
+  set(BOOST_DEBUG ON)
+
+  set(Boost_USE_STATIC_LIBS ON)
+  set(Boost_USE_MULTITHREADED ON)
+  set(Boost_USE_STATIC_RUNTIME OFF)
+
+  if(DEFINED ENV{BOOST_ROOT})
+    set(BOOST_ROOT $ENV{BOOST_ROOT})
+    set(BOOST_LIBRARYDIR ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.0)
+  else()
+    message(FATAL_ERROR "No BOOST_ROOT environment variable could be found! Please make sure it is set and the points to your Boost installation.")
+  endif()
+
 else()
-  # Check C++11 Compiler support.
-  CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX11)
+  # Check C++14 Compiler support.
+  CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
 
   if(NOT COMPILER_SUPPORTS_CXX11)
     # If not given try to enable C++1y
@@ -42,7 +61,8 @@ else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
 endif()
 
-find_package(Boost 1.59 REQUIRED)
+set(Boost_ADDITIONAL_VERSIONS "1.59" "1.59.0")
+find_package(Boost 1.59 REQUIRED system context)
 
 include_directories(${Boost_INCLUDE_DIRS})
 
@@ -52,5 +72,6 @@ file(GLOB TEST_SOURCES *.cpp *.hpp *.h)
 
 add_executable(Playground ${TEST_SOURCES})
 
-#target_link_libraries(Playground
-#)
+target_link_libraries(Playground
+  ${Boost_LIBRARIES}
+)
