some adaptions to the repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(Playground CXX)
+project(Function2 CXX)
 cmake_minimum_required(VERSION 3.1)
 
 include(CheckCXXCompilerFlag)
@@ -27,19 +27,6 @@ if(MSVC)
 
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
 
-  set(BOOST_DEBUG ON)
-
-  set(Boost_USE_STATIC_LIBS ON)
-  set(Boost_USE_MULTITHREADED ON)
-  set(Boost_USE_STATIC_RUNTIME OFF)
-
-  if(DEFINED ENV{BOOST_ROOT})
-    set(BOOST_ROOT $ENV{BOOST_ROOT})
-    set(BOOST_LIBRARYDIR ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.0)
-  else()
-    message(FATAL_ERROR "No BOOST_ROOT environment variable could be found! Please make sure it is set and the points to your Boost installation.")
-  endif()
-
 else()
   # Check C++14 Compiler support.
   CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
@@ -61,17 +48,9 @@ else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
 endif()
 
-set(Boost_ADDITIONAL_VERSIONS "1.59" "1.59.0")
-find_package(Boost 1.57 REQUIRED system context)
-
-include_directories(${Boost_INCLUDE_DIRS})
-
 include_directories(testing)
 
 file(GLOB TEST_SOURCES *.cpp *.hpp *.h)
 
-add_executable(Playground ${TEST_SOURCES})
+add_executable(Test ${TEST_SOURCES})
 
-target_link_libraries(Playground
-  ${Boost_LIBRARIES}
-)
