--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,7 @@ matrix:
 
     - os: linux
       compiler: clang
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.4']
-          packages: ['clang-3.4']
-      env: COMPILER=clang++-3.4
+      env: COMPILER=clang++
 
     - os: linux
       compiler: clang
@@ -54,6 +50,14 @@ matrix:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
           packages: ['clang-3.6']
       env: COMPILER=clang++-3.6
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
+          packages: ['clang-3.7']
+      env: COMPILER=clang++-3.7
 
 install:
   - export CXX=$COMPILER
