--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.8']
+          packages: ['g++-4.8', 'valgrind']
       env: COMPILER=g++-4.8
 
     - os: linux
@@ -20,7 +20,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9']
+          packages: ['g++-4.9', 'valgrind']
       env: COMPILER=g++-4.9
 
     - os: linux
@@ -28,14 +28,14 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-5']
+          packages: ['g++-5', 'valgrind']
       env: COMPILER=g++-5
 
     - os: linux
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.8']
+          packages: ['g++-4.8', 'valgrind']
       compiler: clang
       env: COMPILER=clang++
 
@@ -44,7 +44,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
-          packages: ['clang-3.5']
+          packages: ['clang-3.5', 'valgrind']
       env: COMPILER=clang++-3.5
 
     - os: linux
@@ -52,7 +52,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
-          packages: ['clang-3.6']
+          packages: ['clang-3.6', 'valgrind']
       env: COMPILER=clang++-3.6
 
     - os: linux
@@ -60,7 +60,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
-          packages: ['clang-3.7']
+          packages: ['clang-3.7', 'valgrind']
       env: COMPILER=clang++-3.7
 
 install:
