--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,9 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8', 'valgrind']
-      env: COMPILER=g++-4.8
-
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9', 'valgrind']
-      env: COMPILER=g++-4.9
+      env:
+        - COMPILER=g++-4.8
+        - NO_EXCEPTIONS=OFF
 
     - os: linux
       compiler: gcc
@@ -29,7 +23,19 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5', 'valgrind']
-      env: COMPILER=g++-5
+      env:
+        - COMPILER=g++-5
+        - NO_EXCEPTIONS=OFF
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5', 'valgrind']
+      env:
+        - COMPILER=g++-5
+        - NO_EXCEPTIONS=ON
 
     - os: linux
       addons:
@@ -37,23 +43,9 @@ matrix:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8', 'valgrind']
       compiler: clang
-      env: COMPILER=clang++
-
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
-          packages: ['clang-3.5', 'valgrind']
-      env: COMPILER=clang++-3.5
-
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
-          packages: ['clang-3.6', 'valgrind']
-      env: COMPILER=clang++-3.6
+      env:
+        - COMPILER=clang++
+        - NO_EXCEPTIONS=OFF
 
     - os: linux
       compiler: clang
@@ -61,7 +53,19 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
           packages: ['clang-3.7', 'valgrind']
-      env: COMPILER=clang++-3.7
+      env:
+        - COMPILER=clang++-3.7
+        - NO_EXCEPTIONS=OFF
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
+          packages: ['clang-3.7', 'valgrind']
+      env:
+        - COMPILER=clang++-3.7
+        - NO_EXCEPTIONS=ON
 
 install:
   - export CXX=$COMPILER
@@ -69,8 +73,8 @@ install:
 
   - mkdir bin
   - cd bin
-  - cmake .. -DCMAKE_C_FLAGS="-Werror" -DCMAKE_CXX_FLAGS="-Werror" -DCMAKE_BUILD_TYPE=Release
+  - cmake .. -DCMAKE_CXX_FLAGS="-Werror" -DCMAKE_BUILD_TYPE=Release -DTESTS_NO_EXCEPTIONS=$NO_EXCEPTIONS -DTESTS_NO_DEATH_TESTS=ON
 
 script:
   - make -j2
-  - valgrind --error-exitcode=1 --leak-check=full --show-reachable=yes ./Test
+  - valgrind --error-exitcode=1 --leak-check=full --show-reachable=yes ./test/function2_tests
