First work on allowing partial apply

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,7 +33,8 @@ add_executable(function2_tests
   ${CMAKE_CURRENT_LIST_DIR}/noexcept-test.cpp
   ${CMAKE_CURRENT_LIST_DIR}/self-containing-test.cpp
   ${CMAKE_CURRENT_LIST_DIR}/standard-compliant-test.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/type-test.cpp)
+  ${CMAKE_CURRENT_LIST_DIR}/type-test.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/partial-apply.cpp)
 
 target_link_libraries(function2_tests
   PRIVATE
