--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,10 +14,11 @@ clone_script:
   - cmd: git submodule update --init --recursive
 
 before_build:
-  - cmd: cmake -H. -Bbuild -A%PLATFORM% -DCMAKE_BUILD_TYPE=%CONFIGURATION%
+  - cmd: cmake -H. -Bbuild -A%PLATFORM%
 
 build_script:
   - cmd: cmake --build build --config %CONFIGURATION% --target ALL_BUILD -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:minimal /maxcpucount:2 /nologo
-  
+
 test_script:
-  - cmd: ctest -C %CONFIGURATION% -V build
+  - cmd: cd build
+  - cmd: ctest -C %CONFIGURATION% -V .
