Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: function2
 description: Improved alternative to std::function which supports move only types
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-architect
+theme: jekyll-theme-midnight
 
 gems:
   - jekyll-mentions
