Implement a function_view for invoking non owning callable objects

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(function2_tests
   ${CMAKE_CURRENT_LIST_DIR}/type-test.cpp
   ${CMAKE_CURRENT_LIST_DIR}/multi-signature-test.cpp
   ${CMAKE_CURRENT_LIST_DIR}/regressions.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/view-test.cpp
   ${CMAKE_CURRENT_LIST_DIR}/overload-test.cpp)
 
 target_link_libraries(function2_tests
