--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ clone_script:
   - cmd: git submodule update --init --recursive
 
 before_build:
-  - cmd: cmake -H. -Bbuild -A%PLATFORM%
+  - cmd: cmake -H. -Bbuild -A%PLATFORM% -DCMAKE_CXX_FLAGS="/std:c++17"
 
 build_script:
   - cmd: cmake --build build --config %CONFIGURATION% --target ALL_BUILD -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:minimal /maxcpucount:2 /nologo
