Fix find_package(function2) when using the repository as part of the module path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
 project(function2 VERSION 2.2.0 LANGUAGES CXX)
 
-string(COMPARE EQUAL ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}
-                     IS_TOP_LEVEL_PROJECT)
+if (NOT FU2_IS_FIND_INCLUDED)
+  string(COMPARE EQUAL ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}
+                      FU2_IS_TOP_LEVEL_PROJECT)
+endif()
 
-if (IS_TOP_LEVEL_PROJECT)
+if (FU2_IS_TOP_LEVEL_PROJECT)
   add_library(function2 INTERFACE)
 else()
   add_library(function2 INTERFACE IMPORTED GLOBAL)
@@ -34,7 +36,7 @@ target_compile_features(function2
     cxx_trailing_return_types
     cxx_return_type_deduction)
 
-if (IS_TOP_LEVEL_PROJECT)
+if (FU2_IS_TOP_LEVEL_PROJECT)
   include(ExternalProject)
   include(GNUInstallDirs)
   include(CMakePackageConfigHelpers)
