--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,33 @@
 image:
   - Visual Studio 2017
+  - Visual Studio 2019
 
-configuration:
-  - Debug
+environment:
+  matrix:
+    - CONFIGURATION: Debug
+      FU2_WITH_NO_EXCEPTIONS: OFF
+      FU2_WITH_CPP_LATEST: OFF
+    - CONFIGURATION: Debug
+      FU2_WITH_NO_EXCEPTIONS: ON
+      FU2_WITH_CPP_LATEST: OFF
+    - CONFIGURATION: Debug
+      FU2_WITH_NO_EXCEPTIONS: OFF
+      FU2_WITH_CPP_LATEST: ON
+    - CONFIGURATION: Debug
+      FU2_WITH_NO_EXCEPTIONS: ON
+      FU2_WITH_CPP_LATEST: ON
+    - CONFIGURATION: Release
+      FU2_WITH_NO_EXCEPTIONS: OFF
+      FU2_WITH_CPP_LATEST: OFF
+    - CONFIGURATION: Release
+      FU2_WITH_NO_EXCEPTIONS: ON
+      FU2_WITH_CPP_LATEST: OFF
+    - CONFIGURATION: Release
+      FU2_WITH_NO_EXCEPTIONS: OFF
+      FU2_WITH_CPP_LATEST: ON
+    - CONFIGURATION: Release
+      FU2_WITH_NO_EXCEPTIONS: ON
+      FU2_WITH_CPP_LATEST: ON
 
 platform:
   - x64
@@ -14,7 +39,10 @@ clone_script:
   - cmd: git submodule update --init --recursive
 
 before_build:
-  - cmd: cmake -H. -Bbuild -A%PLATFORM% -DCMAKE_CXX_FLAGS="/std:c++17"
+  - cmd: >
+         cmake -H. -Bbuild -A%PLATFORM%
+         -DFU2_WITH_NO_EXCEPTIONS=%FU2_WITH_NO_EXCEPTIONS%
+         -DFU2_WITH_CPP_LATEST=%FU2_WITH_CPP_LATEST%
 
 build_script:
   - cmd: cmake --build build --config %CONFIGURATION% --target ALL_BUILD -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:minimal /maxcpucount:2 /nologo
