Provide the possibility to prevent evaluations of operator bool() for lamdas that are implicitly convertible to function pointers. * Guard this fix behind FU2_HAS_NO_IMPLICITLY_FN_PTR_CONVERTIBLE_OBJ,   since it can break existing user code where callables provide operator bool() and   an implicit conversion to a function pointer at the same time. * -Waddress warnings generated for non-capturing lambdas on gcc <= 9.2 * bool(_) -> static_cast<bool>(_) * Closes #48

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,13 @@ if (FU2_IS_TOP_LEVEL_PROJECT)
   option(FU2_WITH_CPP_LATEST
       "Enable the highest C++ standard available for testing polyfills"
       OFF)
+  option(FU2_WITH_NO_IMPLICITLY_FN_PTR_CONVERTIBLE_OBJ
+      "Enable ellision of operator bool calls to lambdas. Only define this if you are not using callables that are implicitly convertible to a function pointer and provide operator bool() at the same time."
+      OFF)
+
+  if (FU2_WITH_NO_IMPLICITLY_FN_PTR_CONVERTIBLE_OBJ)
+	add_compile_definitions(function2 INTERFACE FU2_HAS_NO_IMPLICITLY_FN_PTR_CONVERTIBLE_OBJ)
+  endif()
 
   if (BUILD_TESTING)
     if (FU2_WITH_NO_EXCEPTIONS)
